examples/test/testpolicy6987.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6987
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key4: value15
      key15: value14
      key47: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value36
      podSelector:
        matchLabels:
          key35: value0
          key31: value8
